gap fix

--- a/style/gift-style.css
+++ b/style/gift-style.css
@@ -3,16 +3,19 @@ body {
 
     font: 400 16px/1.5em "Open Sans", sans-serif;
 }
+
 .page-content {
     /*max-width: 700px;*/
     margin: 32px auto;
     padding: 32px;
     background: #fff;
 }
+
 a {
     color: #21d4fd;
     transition: all 0.3s;
 }
+
 a:hover {
     color: #b721ff;
 }
@@ -39,11 +42,13 @@ a:hover {
     position: sticky;
     top: 0;
 }
-.tab{
+
+.tab {
 
     flex: 1 0 100px;
 }
-.tab > label {
+
+.tab>label {
     display: block;
     margin-bottom: -1px;
     padding: 12px 15px;
@@ -57,6 +62,7 @@ a:hover {
     cursor: pointer;
     transition: all 0.3s;
 }
+
 .tab:hover label {
     border-top-color: #333;
     color: #333;
@@ -68,34 +74,35 @@ a:hover {
 }
 
 /* As we cannot replace the numbers with variables or calls to element properties, the number of this selector parts is our tab count limit */
-.tabbed [type="radio"]:nth-of-type(1):checked ~ .tabs .tab:nth-of-type(1) label,
-.tabbed [type="radio"]:nth-of-type(2):checked ~ .tabs .tab:nth-of-type(2) label,
-.tabbed [type="radio"]:nth-of-type(3):checked ~ .tabs .tab:nth-of-type(3) label,
-.tabbed [type="radio"]:nth-of-type(4):checked ~ .tabs .tab:nth-of-type(4) label,
-.tabbed [type="radio"]:nth-of-type(5):checked ~ .tabs .tab:nth-of-type(5) label,
-.tabbed [type="radio"]:nth-of-type(6):checked ~ .tabs .tab:nth-of-type(6) label {
+.tabbed [type="radio"]:nth-of-type(1):checked~.tabs .tab:nth-of-type(1) label,
+.tabbed [type="radio"]:nth-of-type(2):checked~.tabs .tab:nth-of-type(2) label,
+.tabbed [type="radio"]:nth-of-type(3):checked~.tabs .tab:nth-of-type(3) label,
+.tabbed [type="radio"]:nth-of-type(4):checked~.tabs .tab:nth-of-type(4) label,
+.tabbed [type="radio"]:nth-of-type(5):checked~.tabs .tab:nth-of-type(5) label,
+.tabbed [type="radio"]:nth-of-type(6):checked~.tabs .tab:nth-of-type(6) label {
     border-bottom-color: #fff;
     border-top-color: #b721ff;
     background: #fff;
     color: #222;
 }
 
-.tabbed [type="radio"]:nth-of-type(1):checked ~ .tab-content:nth-of-type(1),
-.tabbed [type="radio"]:nth-of-type(2):checked ~ .tab-content:nth-of-type(2),
-.tabbed [type="radio"]:nth-of-type(3):checked ~ .tab-content:nth-of-type(3),
-.tabbed [type="radio"]:nth-of-type(4):checked ~ .tab-content:nth-of-type(4),
-.tabbed [type="radio"]:nth-of-type(5):checked ~ .tab-content:nth-of-type(5),
-.tabbed [type="radio"]:nth-of-type(6):checked ~ .tab-content:nth-of-type(6) {
+.tabbed [type="radio"]:nth-of-type(1):checked~.tab-content:nth-of-type(1),
+.tabbed [type="radio"]:nth-of-type(2):checked~.tab-content:nth-of-type(2),
+.tabbed [type="radio"]:nth-of-type(3):checked~.tab-content:nth-of-type(3),
+.tabbed [type="radio"]:nth-of-type(4):checked~.tab-content:nth-of-type(4),
+.tabbed [type="radio"]:nth-of-type(5):checked~.tab-content:nth-of-type(5),
+.tabbed [type="radio"]:nth-of-type(6):checked~.tab-content:nth-of-type(6) {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: clamp(10px, 5%, 30px);
+    gap: clamp(10px, 5%, 100px);
 
 }
-img{
+
+img {
     width: 100%;
-
 }
-.item-wrapper{
+
+.item-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: end;
